force-app/main/default/objects/TMP_Withdraw_Requests__c/TMP_Withdraw_Requests__c.object-meta.xml
<CustomObject>
    <label>TMP_Withdraw_Request</label>
    <nameField>
        <displayFormat>TWR-{0000}</displayFormat>
        <label>TMP_Withdraw_Requests Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TMP_Withdraw_Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>