force-app/main/default/objects/TMP_Withdraw_Requests__c/fields/EnvNo__c.field-meta.xml
<CustomField>
    <fullName>EnvNo__c</fullName>
    <label>EnvNo</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>