force-app/main/default/objects/TMP_Withdraw_Requests__c/fields/InvNo__c.field-meta.xml
<CustomField>
    <fullName>InvNo__c</fullName>
    <label>InvNo</label>
    <length>20</length>
    <type>Text</type>
</CustomField>