force-app/main/default/objects/TMP_Withdraw_Requests__c/fields/Invoice_to_be_voided__c.field-meta.xml
<CustomField>
    <fullName>Invoice_to_be_voided__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invoice to be voided</label>
    <type>Checkbox</type>
</CustomField>