force-app/main/default/objects/TMP_Withdraw_Requests__c/fields/Last_lesson_date__c.field-meta.xml
<CustomField>
    <fullName>Last_lesson_date__c</fullName>
    <label>Last Lesson Date</label>
    <type>Date</type>
</CustomField>