force-app/main/default/objects/TMP_Withdraw_Requests__c/fields/Student_Legacy_ID__c.field-meta.xml
<CustomField>
    <fullName>Student_Legacy_ID__c</fullName>
    <label>Student Legacy ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>